--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,10 @@
-name: webcontent_converter
-description: This plugin was made for developer to convert any webcontent, web
+name: webcontent_converter2
+description: Pluigin for converting any webcontent, web
   uri to image bitmap or pdf file. This plugin use WebView on android, WKWebView
   on Ios and chromium for desktop support.
-version: 0.0.6+2
-homepage: https://github.com/kechankrisna/webcontent_converter.git
+version: 0.0.7
+repository: https://github.com/iandis/webcontent_converter.git
+issue_tracker: https://github.com/iandis/webcontent_converter/issues
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
